--- a/information.html
+++ b/information.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="information.css">
     <link rel="stylesheet" href="normal.css">
+    <link rel="icon" href="./img/favicon.png" type="image/png">
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <title>Information</title>
@@ -40,7 +41,7 @@
                     <div class="text text2">ua.minecraftjoin.xyz</div>
                 </div>
                 <div class="cont2">
-                    <div class="text text1">Bedroc</div>
+                    <div class="text text1">Bedrock</div>
                     <hr class="line">
                     <div class="text text2">Назва: MineClub</div>
                     <div class="text text2">IP: 51.75.33.145</div>
