--- a/whitelist.html
+++ b/whitelist.html
@@ -6,6 +6,7 @@
     <!-- <link rel="stylesheet" href="information.css"> -->
     <link rel="stylesheet" href="normal.css">
     <link rel="stylesheet" href="whitelist.css">
+    <link rel="icon" href="./img/favicon.png" type="image/png">
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <title>Whitelist</title>
