--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="text">Ми найатмосферніший український сервер та доказ того, що все можливе !</p>
             <div class="bloc">Нові друзі</div>
             <div class="bloc">Крутий контент</div>
-            <div class="bloc">Івенти з признаками</div>
+            <div class="bloc">Івенти з подарунками</div>
             <p class="text2">Все це і не тільки чекає на тебе на нашому атмосферному сервері ;)</p>
         </div>
     </main>
