--- a/whitelist.html
+++ b/whitelist.html
@@ -42,7 +42,7 @@
                             <div class="margin"></div>
                             <span class="textColor1 textC">Тепер тобі потрібно вибрати платформу, з якої ти будеш грати: <span class="RGB1">Java</span> чи <span class="RGB1">Bedrock</span></span>
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Після того, як ти надішлеш заявку, протягом дня з тобою зв'яжеться адміністрація і повідомить, що <span class="RGB1">додала тебе до вайтліста</span></span> 
+                            <span class="textColor1 textC">Після того, як ти надішлеш заявку, протягом дня з тобою зв'яжеться адміністрація і повідомить, що <span class="RGB1">додала тебе до вайтлиста</span></span> 
                             <div class="margin"></div>
                             <span class="textColor1 textC">Ми засуджуємо і не підтримуємо використання російських ігрових лаунчерів і настійно просимо їх не використовувати! Альтернативою можуть бути ліцензійні, зарубіжні або <span class="RGB2">українські</span> ігрові лаунчери.</span>
                         </div>
