--- a/information.html
+++ b/information.html
@@ -20,9 +20,10 @@
                 <div><a href="#" class="now info plus">Information</a></div>
                 <div><a href="whitelist.html" class="plus2 plus">Whitelist</a></div>
                 <div><a href="rules.html" class="rul plus">Rules</a></div>
-                <div><a href="https://docs.google.com/forms/d/1GbWUX8a0gFLTG6EpUyjECv27mVaMeVPrUql2-qMYmzo/edit" target="_blank" class="plus2 plus">Complait</a></div>
+                <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="plus2 plus">Complait</a></div>
                 <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img class="iconNAV" src="./img/dc.png" alt="dc"></a></div>
                 <div><a href="https://t.me/AtmoMine/1" target="_blank"><img class="iconNAV" src="./img/tg.png" alt="tg"></a></div>
+                <div><a href="http://51.75.57.34:25666/#world:-1:0:0:7593:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map"></a></div>
             </div>
         </nav>
     </header>
@@ -63,7 +64,7 @@
                         <div class="marg">
                             <span class="textColor textC">Основне, що про нас треба знати,</span>
 
-                            <span class="textColor1 textC">це те, що ми починали як по клуб грі в нашому навчальному закладі.</span>
+                            <span class="textColor1 textC">це те, що ми починали як клуб гри в нашому навчальному закладі.</span>
                             <div class="margin"></div>
                             <span class="textColor1 textC">Проте згодом ми стали <span class="rgbText3">найбільшим клубом у школі</span> і зрозуміли, що нам потрібно розвиватися далі.</span> 
                             <div class="margin"></div>
@@ -95,7 +96,7 @@
                             <div class="margin"></div>
                             <span class="textColor1 textC">Оскільки сервер є приватним, на ньому включено <span class="RGB2">вайтлист</span><img class="on" src="./img/Toggle On.png" alt="On"></span>
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Щоб мати можливість пограти на нашому атмосферному приватному сервері, <span class="RGB2">тобі потрібно потрапити у вайтлист</span></span> 
+                            <span class="textColor1 textC">Щоб мати можливість пограти на нашому атмосферному приватному сервері, <span class="RGB2">тобі потрібно потрапити до вайтлист</span></span> 
                             <div class="margin"></div>
                             <span class="textColor1 textC">Для цього перейди у вкладку "<span class="RGB2">whitelist</span>", заповни форму — і ось, це все! Найближчим часом адміністрація додасть тебе до вайтлисту та сповістить тебе про це ; )
                             </span>
@@ -120,12 +121,12 @@
                             <span class="RGB3 textC">Приватний ванільний сервер з вайтлистом</span>
                             <div class="margin"></div>
                             <span class="textColor1 textC">
-                                Кастомна генерація, що додає  ексклюзивності світу
-                                Голосовий чат
-                                Регулярні івентові батлпас
+                                Кастомна генерація, що додає  ексклюзивності світу.
+                                Голосовий чат.
+                                Регулярні івентові батлпаси.
                             </span>
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Це те, що дає нашому серверу можливість бути ексклюзивним і залишатися ванільним сервером для <span class="RGB3">кожного.</span></span>
+                            <span class="textColor1 textC">Це те, що дає нашому серверу можливість бути ексклюзивним і залишатися ванільним сервером <span class="RGB3">для кожного.</span></span>
                         </div>
                     </div>
                 </div>
