--- a/rules.html
+++ b/rules.html
@@ -21,9 +21,10 @@
                 <div><a href="information.html" class=" info plus">Information</a></div>
                 <div><a href="whitelist.html" class=" plus2 plus">Whitelist</a></div>
                 <div><a href="#" class="now rul plus">Rules</a></div>
-                <div><a href="https://docs.google.com/forms/d/1GbWUX8a0gFLTG6EpUyjECv27mVaMeVPrUql2-qMYmzo/edit" target="_blank" class="plus2 plus">Complait</a></div>
+                <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="plus2 plus">Complait</a></div>
                 <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img class="iconNAV" src="./img/dc.png" alt="dc"></a></div>
                 <div><a href="https://t.me/AtmoMine/1" target="_blank"><img class="iconNAV" src="./img/tg.png" alt="tg"></a></div>
+                <div><a href="http://51.75.57.34:25666/#world:-1:0:0:7593:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map"></a></div>
             </div>
         </nav>
     </header>
@@ -66,7 +67,7 @@
                                     <span class="white">1.5</span> Введення в оману учасників проєкту, обман гравців, шахрайство та створення фінансових пірамід — заборонені. (warn)
                                 </li>
                                 <li>
-                                    <span class="white">1.6</span>  Заборонено створювати і використовувати нікнейми, скіни, предмети, що містять натяки на нацистські, аморальні, політичні та інші подібні теми. (перейменування + warn
+                                    <span class="white">1.6</span>  Заборонено створювати і використовувати нікнейми, скіни, предмети, що містять натяки на нацистські, аморальні, політичні та інші подібні теми. (перейменування + warn)
                                 </li>
                                 <li>
                                     <span class="white">1.7</span>  Забороняється володіння і використання більше одного акаунта, за винятком особливих ситуацій, узгоджених з адміністрацією. (ban)
@@ -76,7 +77,7 @@
                             <span class="textColor textC">Будівлі та території</span>
                             <ul class="ruletext">
                                 <li>
-                                   <span class="white">2.0</span> Заборонено будівництво сміттєвих або аморальних споруд, нацистської символіки, неповна вирубка дерев. (знесення + warn)
+                                   <span class="white">2.0</span> Заборонено будівництво сміттєвих або аморальних споруд, нацистської символіки, неповне вирубування дерев. (знесення + warn)
                                 </li>
                                 <li>
                                     <span class="white">2.1</span> Територія гравця є приватною власністю і недоторканною. Власник території має право встановлювати свої правила відвідування та перебування на ній, якщо вони не суперечать правилам сервера.
