--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <div><a href="information.html" class="info plus">Information</a></div>
                 <div><a href="whitelist.html" class="plus2 plus">Whitelist</a></div>
                 <div><a href="rules.html" class="rul plus">Rules</a></div>
-                <div><a href="https://docs.google.com/forms/d/1GbWUX8a0gFLTG6EpUyjECv27mVaMeVPrUql2-qMYmzo/edit" target="_blank" class="plus2 plus">Complait</a></div>
+                <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="plus2 plus">Complait</a></div>
                 <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img src="./img/dc.png" alt="dc"></a></div>
                 <div><a href="https://t.me/AtmoMine/1" target="_blank"><img src="./img/tg.png" alt="tg"></a></div>
+                <div><a href="http://51.75.57.34:25666/#world:-1:0:0:7593:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map"></a></div>
             </div>
             <video src="./img/givHome.mp4" type="video/mp4" autoplay muted loop></video>
         </nav>
