--- a/whitelist.html
+++ b/whitelist.html
@@ -21,9 +21,10 @@
                 <div><a href="information.html" class=" info plus">Information</a></div>
                 <div><a href="#" class="now plus2 plus">Whitelist</a></div>
                 <div><a href="rules.html" class="rul plus">Rules</a></div>
-                <div><a href="https://docs.google.com/forms/d/1GbWUX8a0gFLTG6EpUyjECv27mVaMeVPrUql2-qMYmzo/edit" target="_blank" class="plus2 plus">Complait</a></div>
+                <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="plus2 plus">Complait</a></div>
                 <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img class="iconNAV" src="./img/dc.png" alt="dc"></a></div>
                 <div><a href="https://t.me/AtmoMine/1" target="_blank"><img class="iconNAV" src="./img/tg.png" alt="tg"></a></div>
+                <div><a href="http://51.75.57.34:25666/#world:-1:0:0:7593:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map"></a></div>
             </div>
         </nav>
     </header>
@@ -38,13 +39,13 @@
                             <div class="fon3"><img class="img4" src="./img/Shield.png" alt="S"></div>
                         </div>
                         <div class="marg">
-                            <span class="textColor textC">Ти майже на сервері !</span>
+                            <span class="textColor textC">Ти майже на сервері!</span>
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Тепер тобі потрібно вибрати платформу, з якої ти будеш грати: <span class="RGB1">Java</span> чи <span class="RGB1">Bedrock</span></span>
+                            <span class="textColor1 textC">Тепер тобі потрібно вибрати платформу, з якої ти будеш грати: <span class="RGB1">Java</span> чи <span class="RGB1">Bedrock</span>.</span>
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Після того, як ти надішлеш заявку, протягом дня з тобою зв'яжеться адміністрація і повідомить, що <span class="RGB1">додала тебе до вайтлиста</span></span> 
+                            <span class="textColor1 textC">Після того, як ти надішлеш заявку, протягом дня з тобою зв'яжеться адміністрація та повідомить, що <span class="RGB1">додала тебе до вайтлиста</span></span> 
                             <div class="margin"></div>
-                            <span class="textColor1 textC">Ми засуджуємо і не підтримуємо використання російських ігрових лаунчерів і настійно просимо їх не використовувати! Альтернативою можуть бути ліцензійні, зарубіжні або <span class="RGB2">українські</span> ігрові лаунчери.</span>
+                            <span class="textColor1 textC">Ми засуджуємо і не підтримуємо використання російських ігрових лаунчерів і настійно просимо їх не використовувати! Альтернативою можуть бути ліцензійні, закордонні або <span class="RGB2">українські</span> ігрові лаунчери.</span>
                         </div>
                     </div>
                 </div>
@@ -57,12 +58,12 @@
                         
                     </div>
                     <div class="bloc">
-                        <a class="bacra bacra1" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdElY1oteOip-VFIHFpBmChFREjrTZzvQnosvtVop0RsxllVA/viewform?usp=dialog">
+                        <a class="bacra bacra1" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdF4vCFEdrXbIyD6LU7-CIiWaPQG4xtjXo2wPX8KQkniu9NkQ/viewform?usp=dialog">
                             <div class="textCent"><span class="text1">Java edition</span>
                                 <img class="img1" src="./img/Crafting Table (1).png" alt="Crafting">
                             </div>
                         </a>
-                        <a class="bacra bacra2" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfTWLqwBLsi_lOh9fgttSBOT1umJNAdE2MWxpruBY93eP_tCw/viewform?usp=dialog">
+                        <a class="bacra bacra2" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf-wZocMbYzoV6AFAb5VFhAaYqQyR0kLVt5fcWK-NBUvDXdjg/viewform?usp=dialog">
                             <div class="textCent"><span class="text2">Bedrock Edition</span>
                                 <img class="img1" src="./img/Minecraft Creeper@2x.png" alt="Criper">
                             </div>
