--- a/information.html
+++ b/information.html
@@ -14,16 +14,33 @@
     <header>
         <nav>
             <div class="navbar">
-                <div class="logo"><img  src="./img/Cnopca_serva_v_uglu.png" alt="Mine"></div>
+                <div class="none_bloc navig_fon">
+                    <img id="clic" class="none_bloc" src="./img/Menu.png" alt="menu">
+                    <div id="navigation" class="clic1">
+                        <div class="nav_fon fon_nav_tel">
+                            <div class="none_bloc nav_fon"><a href="index.html" class="retreat  plus1 plus"><img src="./img/Exterior.png" alt="">Home</a></div>
+                            <div class="none_bloc nav_fon"><a href="#" class="retreat info plus now"><img src="./img/Search_Property.png" alt="">Information</a></div>
+                            <div class="none_bloc nav_fon"><a href="whitelist.html" class="retreat plus2 plus"><img src="./img/Hand_Box.png" alt="">Whitelist</a></div>
+                            <div class="none_bloc nav_fon"><a href="rules.html" class="retreat rul plus"><img src="./img/Shield2.png" alt="">Rules</a></div>
+                            <div class="none_bloc nav_fon"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="retreat plus2 plus"><img src="./img/Rules.png" alt="">Complait</a></div>
+                        </div>
+                    </div>        
+                </div>
+
+                <div class="logo"><img src="./img/Cnopca_serva_v_uglu.png" alt="Mine"></div>
                 <div></div>
-                <div><a href="index.html" class="plus1 plus">Home</a></div>
-                <div><a href="#" class="now info plus">Information</a></div>
-                <div><a href="whitelist.html" class="plus2 plus">Whitelist</a></div>
-                <div><a href="rules.html" class="rul plus">Rules</a></div>
-                <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="plus2 plus">Complait</a></div>
-                <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img class="iconNAV" src="./img/dc.png" alt="dc"></a></div>
-                <div><a href="https://t.me/AtmoMine/1" target="_blank"><img class="iconNAV" src="./img/tg.png" alt="tg"></a></div>
-                <div><a href="http://51.75.57.34:25666/#world:-1:0:0:7593:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map"></a></div>
+                <div id="display">
+                    <div><a href="index.html" class="retreat plus1 plus">Home</a></div>
+                    <div><a href="#" class="retreat info plus now">Information</a></div>
+                    <div><a href="whitelist.html" class="retreat plus2 plus">Whitelist</a></div>
+                    <div><a href="rules.html" class="retreat rul plus">Rules</a></div>
+                    <div><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVVL2PZNEGtz4VTpBpmHdUvyMVyoWwxTo6Mgzt0qy5K6zchA/viewform?usp=dialog" target="_blank" class="retreat plus2 plus">Complait</a></div>
+                </div>
+                <div class="nav_icon">
+                    <div><a href="https://discord.gg/pC43MXWaYH" target="_blank"><img src="./img/dc.png" alt="dc" class="dc"></a></div>
+                    <div><a href="https://t.me/AtmoMine/1" target="_blank"><img src="./img/tg.png" alt="tg" class="tg"></a></div>
+                    <div><a href="https://atmocraftmap.dynmap.me/#world:-1:0:0:1500:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map" class="map1"></a></div>
+                </div>
             </div>
         </nav>
     </header>
@@ -33,7 +50,7 @@
             <div class="grid">
                 <div></div>
                 <div></div>
-                <img class="fox" src="./img/fox.png" alt="fox">
+                <div class="fox_div"><img class="fox" src="./img/fox.png" alt="fox"></div>
             </div>
             <div class="img">
                 <div class="cont1">
@@ -51,14 +68,23 @@
                 <img class="img2" src="./img/maintenance 1.png" alt="maintenance">
             </div>
         </section>
+
+
+
+
+
+
+
+        <section class="ord">
         <section class="information">
-            <div class="box">  
+            <div class="box boxO1">  
                 <div>
                     <div class="NavObgText">Все про нас</div>
+                    <hr class="none_hr">
                     <div class="obg">
                         <div class="flex">
                             <div class="circle"><img class="radius" src="./img/icon.png" alt="M"></div>
-                            <span class="rgbText1">MineClub</span>
+                            <span class="rgbText1 right1">MineClub</span>
                             <div class="fon3"><img class="img3" src="./img/Name Tag.png" alt="S"></div>
                         </div>
                         <div class="marg">
@@ -73,23 +99,24 @@
                     </div>
                 </div>
 
-                <div class="fon">
+                <div class="fon boxO2">
                     <img class="fon1" src="./img/Union_fon.png">
                     <img class="mascot" src="./img/mascot.png" alt="mascot">
                     <div class="text text3">Наш маскот</div>
                     <hr class="line1 line">        
             </div>
         </section>  
-        <section class="information1">
+        <section class="information1">            
             <!-- BOX -->
-            <div class="box box1">
+            <div class="box box1 boxO3">
                 <div>
                     <div class="NavObgText">Все про вайтлист</div>
+                    <hr class="none_hr">
                     <div class="obg1 obg">
                         <div class="flex">
-                            <div class="circle"><img class="radius" src="./img/icon2.png" alt="W"></div>
-                            <span class="RGB2  rgbText1">whitelist</span>
-                            <div class="fon3"><img class="img3" src="./img/Shield.png" alt="S"></div>
+                            <div class="circle iconW"><img class="radius" src="./img/icon2.png" alt="W"></div>
+                            <span class="RGB2 rgbText1 right3">Whitelist</span>
+                            <div class="fon3 Shield"><img class="img3" src="./img/Shield.png" alt="S"></div>
                         </div>
                         <div class="marg">
                             <span class="textColor textC">Основне, що треба знати про вайтлист:</span>
@@ -102,17 +129,18 @@
                             </span>
                         </div>
                     </div>
+                    <img class="fox1 display_none" src="./img/fox.png" alt="fox">
                 </div>
             </div>
-        
             <!-- BOX2 -->
-            <div class="box box1">
+            <div class="box box1 AllServer boxO4">
                 <div>
                     <div class="NavObgText">Все про сервер</div>
+                    <hr class="none_hr">
                     <div class="obg">
                         <div class="flex">
                             <div class="circle"><img class="icon3" src="./img/icon3.png" alt="I"></div>
-                            <span class="RGB3 rgbText1">AtmoCraft</span>
+                            <span class="RGB3 rgbText1 right">AtmoCraft</span>
                             <div class="fon5 fon3"><img class="img5" src="./img/People.png" alt="S"></div>
                         </div>
                         <div class="marg">                           
@@ -132,6 +160,10 @@
                 </div>
             </div>
         </section>
+        </section>
+
+
+
 
 
     </main>
@@ -144,5 +176,6 @@
             <p class="textF">Not an official Minecraft product. We are in no way affiliated with or endorsed by Mojang Synergies AB, Microsoft Corporation or other rightsholders.</p>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
