--- a/whitelist.html
+++ b/whitelist.html
@@ -18,7 +18,7 @@
                 <div class="none_bloc navig_fon">
                     <img id="clic" class="none_bloc" src="./img/Menu.png" alt="menu">
                     <div id="navigation" class="clic1">
-                        <div class="nav_fon fon_nav_tel">
+                        <div id="animation" class="nav_fon fon_nav_tel">
                             <div class="none_bloc nav_fon"><a href="index.html" class="retreat  plus1 plus"><img src="./img/Exterior.png" alt="">Home</a></div>
                             <div class="none_bloc nav_fon"><a href="information.html" class="retreat info plus"><img src="./img/Search_Property.png" alt="">Information</a></div>
                             <div class="none_bloc nav_fon"><a href="#" class="retreat plus2 plus now"><img src="./img/Hand_Box.png" alt="">Whitelist</a></div>
